--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width" />
-	<title>DAVID's OpenHab Project</title>
+	<title>Xively Feed Visualization Demo</title>
 
 	<link type="text/css" rel="stylesheet" href="css/normalize.css" />
 	<link type="text/css" rel="stylesheet" href="css/foundation.min.css" />
@@ -26,16 +26,13 @@
 			overflow-x: hidden;
 			background: #666 url(img/loading.gif) center center no-repeat;
 		}
-
 		.hidden {
 			display: none;
 		}
-
 		#xivelyContent {
 			background: #fff;
 			box-shadow: inset 0px 0px 100px #f0f0f0;
 		}
-
 			.graphWrapper {
 				-moz-box-shadow:inset 0px 0px 50px 25px #ffffff;
 				-webkit-box-shadow:inset 0px 0px 50px 25px #ffffff;
@@ -54,6 +51,7 @@
 				);
 			}
 	</style>
+
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
 	<script src="js/custom.modernizr.js"></script>
