--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 					<div class="large-5 columns">
 						<h4 class="subheader">Location</h4>
 						<div class="alert alert-box hidden no-location">
-							Sorry, no location information is available.
+							Please setup Google maps.
 						</div>
 						<div class="row location-name">
 							<div class="large-4 columns"><strong>Name</strong></div>
